--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,3 +1,7 @@
+before_script:
+  - lscpu
+  - RAILS_ENV=test bundle exec rake db:schema:load
+rvm: true
 environment:
   MYVARIABLE: my-value
 script:
