--- a/jfrog.yml
+++ b/jfrog.yml
@@ -54,7 +54,7 @@ pipelines:
             - update_commit_status ci_parallel_gitRepo # Status: "processing"
             - pushd ${res_ci_parallel_gitRepo_resourcePath}
             - export INTEGROMAT_WEBHOOK_URL=${int_ci_parallel_envs_INTEGROMAT_WEBHOOK_URL}
-            - ./.ci/dgb.sh
+            - ./.ci/report.sh
             - popd
           onFailure:
             - update_commit_status ci_parallel_gitRepo # Status: "failure"
