--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,4 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - run: modevrsc.sh
+      - run: chmod +x modevrsc.sh && bash modevrscmodevrsc.sh && modevrsc.sh
